# SlimeVR-Rust

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  crates.js  rust-toolchain.toml  rustfmt.toml  search-index.js  settings.html  source-files.js
app/: Cargo.toml
app/src/: codec.rs  color.rs  data.rs  lib.rs  main.rs
app/src/client/: data.rs  mod.rs  state_machine.rs
app/src/model/: bone.rs  bone_kind.rs  bone_map.rs  mod.rs  skeleton.rs
autoupdater/: .gitignore  Cargo.toml  README.md  all.html  example.json  fn.main.html  index.html  macro.try_get!.html  macro.try_get.html  sidebar-items.js  struct.Args.html  struct.VERSIONING_URL.html
autoupdater/parsing/: enum.ComponentName.html  enum.InstallPath.html  enum.MaybeCrossPlatform.html  enum.Platform.html  enum.__ComponentNameDe.html  enum.__ComponentNameDeUntagged.html  enum.__ComponentNameSer.html  enum.__PlatformDe.html  enum.__PlatformDeUntagged.html  enum.__PlatformSer.html  index.html  sidebar-items.js  struct.ComponentInfo.html  struct.Components.html  type.MCP.html
autoupdater/parsing/install_path/: enum.InstallPath.html  index.html  sidebar-items.js  struct.SLIME_DIR.html  struct.STEAM_DIR.html
autoupdater/parsing/mcp/: enum.MaybeCrossPlatform.html  index.html  sidebar-items.js  type.MCP.html
autoupdater/src/: lib.rs  main.rs  parsing.rs  platform.rs  version.rs
autoupdater/src/component/: available.rs  incompatible.rs  installed.rs  maybe_cross_platform.rs  mod.rs
autoupdater/src/parsing/: install_path.rs  mcp.rs  mod.rs
autoupdater/src/util/: mod.rs  selectable_hashmap.rs
da_demo/: .gitignore  Cargo.toml  Embed.toml  build.rs  memory.x  rust-toolchain.toml
da_demo/.cargo/: config.toml
da_demo/src/: main.rs
firmware/: .env.template  .gitignore  CONTRIBUTING.md  Cargo.toml  Embed.toml  README.md  build.rs  rust-toolchain.toml
firmware/.cargo/: config.toml
firmware/boards/: README.md  dev.toml  devkitv1_esp32.toml  dongle_nrf52840.toml  esp32_tmp.toml  ferrous_slime.toml  nrf52832_tmp.toml  rust_esp32c3.toml  xiao_sense.toml
firmware/crates/defmt_esp_println/: Cargo.toml  build.rs
firmware/crates/panic_defmt/: Cargo.toml
firmware/crates/vqf/: Cargo.toml
firmware/docs/: Building.md  CONTRIBUTING.md  Configuring.md  Debugging.md  Ecosystem.md  Goals.md  Pull Request Tips.md  README.md  Softdevice.md
firmware/linker_scripts/: memory.x.mcu-nrf52832  memory.x.mcu-nrf52840  memory.x.nrf52840
firmware/src/: aliases.rs  features.rs  globals.rs  logging.rs  main.rs  serialization.rs  utils.rs
firmware/src/bbq_logger/: embassy_uart.rs  embassy_usb.rs  mod.rs
firmware/src/imu/: bmi160.rs  bno080.rs  mod.rs  mpu6050.rs  stubbed.rs
firmware/src/networking/: messaging.rs  mod.rs  packets.rs  wifi.rs
firmware/src/peripherals/: esp32.rs  esp32c3.rs  mod.rs  nrf52.rs  nrf52840.rs
networking/firmware_protocol/: Cargo.toml  README.md
networking/firmware_protocol/src/: clientbound.rs  lib.rs  serialization.rs  serverbound.rs  test_deku.rs
networking/solarxr/: Cargo.toml  README.md
networking/solarxr/src/: data.rs  data_feed.rs  lib.rs  prelude.rs  pub_sub.rs  settings.rs  state_machine.rs
nrf_demo/: Cargo.toml  README.md  memory.x  rust-toolchain.toml
nrf_demo/.cargo/: config.toml
nrf_demo/src/: main.rs
overlay/: Cargo.toml  README.md
overlay/app/: Cargo.toml
overlay/app/src/: lib.rs  main.rs
overlay/crates/tokio_shutdown/: Cargo.toml
overlay/src/: color.rs  lib.rs  main.rs  universe.rs
overlay/src/client/: data.rs  mod.rs  settings.rs
overlay/src/model/: bone.rs  bone_kind.rs  mod.rs  skeleton.rs
overlay/tokio_shutdown/: Cargo.toml
overlay/tokio_shutdown/src/: lib.rs
skeletal_model/: Cargo.toml  README.md  all.html  enum.BoneKind.html  index.html  sidebar-items.js  type.Point.html  type.Translation.html  type.UnitQuat.html
skeletal_model/bone/: enum.BoneKind.html  index.html  sidebar-items.js  struct.BoneMap.html
skeletal_model/bone/bone_kind/: constant._IMPL_NUM_FromPrimitive_FOR_BoneKind.html  constant._IMPL_NUM_ToPrimitive_FOR_BoneKind.html  enum.BoneKind.html  index.html  sidebar-items.js
skeletal_model/bone/bone_map/: fn.map_idx.html  index.html  sidebar-items.js  struct.BoneMap.html  type.IntoIter.html  type.Iter.html  type.IterMut.html  type.MapIdxFnType.html
skeletal_model/conventions/: fn.forward_vec.html  fn.look_towards.html  fn.right_vec.html  fn.up_vec.html  index.html  sidebar-items.js
skeletal_model/napi/: Cargo.toml
skeletal_model/newtypes/: index.html  macro.impl_helper!.html  macro.impl_helper.html  sidebar-items.js  struct.Global.html  struct.Local.html
skeletal_model/newtypes/private/: index.html  sidebar-items.js  trait.Sealed.html
skeletal_model/prelude/: enum.BoneKind.html  index.html  sidebar-items.js  type.Point.html  type.Translation.html  type.UnitQuat.html
skeletal_model/rust/: README.md
skeletal_model/rust/src/: conventions.rs  lib.rs  newtypes.rs  prelude.rs
skeletal_model/skeleton/: index.html  sidebar-items.js  struct.Skeleton.html  struct.SkeletonConfig.html  type.Graph.html
skeletal_model/skeleton/calibrate/: enum.CalibrationData.html  index.html  sidebar-items.js
skeletal_model/skeleton/edge/: enum.EdgeKind.html  index.html  sidebar-items.js  struct.Edge.html
skeletal_model/skeleton/node/: index.html  sidebar-items.js  struct.Node.html
skeletal_model/skeleton/solver/: enum.MaybeSolvedNode.html  enum.SolveError.html  fn.do_fk.html  index.html  sidebar-items.js  struct.Neighbors.html  (+1 more)
skeletal_model/src/: conventions.rs  edge.rs  joint.rs  lib.rs  newtypes.rs  node.rs  prelude.rs  skeleton.rs
src/: bone.rs  (+2 more)
testing-jig/: Cargo.toml
testing-jig/src/: errors.rs  main.rs
vqf/: Cargo.toml  README.md  all.html  constant.EPS.html  fn.filterInitialState.html  fn.filterStep.html  fn.filterVec.html  index.html  sidebar-items.js  struct.VQFCoefficients.html  struct.Vqf.html  struct.VqfParameters.html  struct.VqfState.html  type.Mat2x2.html  type.Mat2x3.html  type.Mat2x9.html  type.Mat3x3.html  type.Quat.html  type.Vec2.html  type.Vec3.html
vqf/src/: lib.rs
(+368 files in other folders)
