[workspace]
members = [
  "autoupdater",
  "networking/firmware_protocol",
  "networking/solarxr",
  "networking/tokio_shutdown",
  "overlay",
  "skeletal_model/rust",
  "skeletal_model/napi",
  "vqf",
]
exclude = ["da_demo", "nrf_demo", "firmware"]
default-members = [
  "autoupdater",
  "networking/firmware_protocol",
  "networking/solarxr",
  "networking/tokio_shutdown",
  "skeletal_model/rust",
  "skeletal_model/napi",
  "vqf",
]

resolver = "2"


# These settings will apply to all members of the workspace that opt in to them
[workspace.package]
license = "MIT OR Apache-2.0"
authors = ["Ryan Butler <thebutlah@gmail.com>"]
repository = "https://github.com/SlimeVR/SlimeVR-Rust"

edition = "2021"
rust-version = "1.65" # GATs and let-else


# These may be opted into use by members of the workspace
[workspace.dependencies]
log = "0.4"
eyre = "0.6"
nalgebra = "0.31"
feature_macros = { git = "https://github.com/TheButlah/feature_macros" }
