[package]
name = "slimevr_overlay"
version = "0.0.0"
authors = ["Ryan Butler <thebutlah@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
color-eyre = "0.6"
ctrlc = "3"
eyre = "0.6"
lazy_static = "1"
log = "0.4"
nalgebra = "0.30"
num-derive = "0.3"
num-traits = "0.2"
ovr_overlay = { git = "https://github.com/thebutlah/ovr_overlay", features = [
    "nalgebra",
] }
pretty_env_logger = "0.4"
stackvec = "0.2"
thiserror = "1"
bytes = "1"
tokio-util = { version = "0.7", features = ["codec"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.17"
futures-util = "0.3"
ouroboros = "0.15"
slimevr_protocol = { git = "https://github.com/SlimeVR/SolarXR-Protocol", rev = "4f87d1a5317f777f5080db1d31767491432de424" }
