[package]
name = "slimevr_overlay"
version = "0.0.0"
authors = ["Ryan Butler <thebutlah@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
color-eyre = "0.6"
ctrlc = "3"
eyre = "0.6"
lazy_static = "1"
log = "0.4"
nalgebra = "0.30"
ovr_overlay = { git = "https://github.com/thebutlah/ovr_overlay", features = [
    "nalgebra",
] }
pretty_env_logger = "0.4"
