[package]
name = "autoupdater"
version = "0.0.0"

license = "MIT OR Apache-2.0"
authors = ["Ryan Butler <thebutlah@gmail.com>"]
repository = "https://github.com/SlimeVR/SlimeVR-Overlay"

edition = "2021"
rust-version = "1.61"

[dependencies]
eyre = "0.6"
reqwest = "0.11"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
url = { version = "2", features = ["serde"] }
clap = { version = "3", features = ["derive"] }
lazy_static = "1"
