[package]
name = "autoupdater"
version = "0.0.0"

license.workspace = true
authors.workspace = true
repository.workspace = true

edition.workspace = true
rust-version.workspace = true

[dependencies]
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
url = { version = "2", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
lazy_static = "1"
serde_yaml = "0.9"
derive_more = "0.99"
serde-enum-str = "0.3"
tempfile = "3"
futures = "0.3"
color-eyre = "0.6"
path-absolutize = "3"
semver = { version = "1.0.16", features = ["serde"] }
