[package]
name = "da_demo"
version = "0.1.0"
edition = "2021"

license = "MIT OR Apache-2"
authors = ["Uriel Fontan <urielfontan2002@gmail.com>"]
repository = "https://github.com/SlimeVR/SlimeVR-Rust"

rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
panic-halt = "0.2.0"
defmt = "0.3"
defmt-rtt = "0.4"
da14531-hal = "0.2.2"

[profile.dev]
codegen-units = 1 # better optimizations
debug = 2 
lto = true 
opt-level = "z" 

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true 
opt-level = "z" 
