[package]
name = "nrf_demo"
version = "0.1.0"
authors = ["Ryan Butler <thebutlah@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7.1" }
nrf52840-hal = { version = "0.16.0", default-features = false }
panic-halt = "0.2.0"
defmt = "0.3"
embedded-hal = "0.2"
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "cb9f0ef5b800ce4a22cde1805e0eb88425f1e07b", features = [
  "nightly",
  # "integrated-timers",
] }
embassy-futures = "0.1"
static_cell = "1"
