[package]
name = "slimevr_overlay"
version = "0.0.0"

license.workspace = true
authors.workspace = true
repository.workspace = true

edition.workspace = true
rust-version.workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
lazy_static = "1"
nalgebra = { version = "0.30", features = ["serde-serialize"] }
num-derive = "0.3"
num-traits = "0.2"
#ovr_overlay = { version = "=0.0.0", features = ["nalgebra"] }
ovr_overlay = { git = "https://github.com/TheButlah/ovr_overlay", features = ["nalgebra", "ovr_system", "ovr_chaperone_setup"]}
serde = "1.0"
serde_json = "1.0"
stackvec = "0.2"
tokio = { version = "1", features = ["full"] }
solarxr = { path = "../networking/solarxr" }
tokio-graceful-shutdown = "0.11"
git-version = "0.3"
log4rs = "1.2.0"

eyre.workspace = true
log.workspace = true

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3", features = ["wincon", "winuser"]}


