[package]
name = "skeletal_model"
version = "0.0.0"

license = "MIT OR Apache-2.0"
authors = ["Ryan Butler <thebutlah@gmail.com>"]
repository = "https://github.com/TheButlah/ferrous_slimevr"

edition = "2021"
rust-version = "1.61"

[dependencies]
nalgebra = "0.31"
thiserror = "1"
derive_more = "0.99"
petgraph = "0.6"
daggy = "0.8"
