[package]
name = "skeletal_model"
version = "0.0.0"

license = "MIT OR Apache-2.0"
authors = ["Ryan Butler <thebutlah@gmail.com>"]
repository = "https://github.com/SlimeVR/SlimeVR-Rust"

edition = "2021"
rust-version = "1.61"

[dependencies]
daggy = "0.8"
derive_more = "0.99"
ghost-cell = "0.2"
nalgebra = "0.31"
num-derive = "0.3"
num-traits = "0.2"
thiserror = "1"
stackvec = "0.2"
approx = "0.5"
