[package]
name = "skeletal_model"
version = "0.0.0"

license.workspace = true
authors.workspace = true
repository.workspace = true

edition.workspace = true
rust-version.workspace = true

[dependencies]
petgraph = "0.6"
derive_more = "0.99"
num-derive = "0.3"
num-traits = "0.2"
thiserror = "1"
stackvec = "0.2"
approx = "0.5"

nalgebra.workspace = true
