[package]
name = "testing-jig"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"


[features]
# crossbeam = ["dep:crossbeam-channel", "notify/crossbeam-channel"]

[dependencies]
tokio = { version = "1", default-features = false, features = ["full"] }
embedded-hal = "0.2.3"
rppal = { version = "0.13", features = ["hal"] }
notify = { version = "5", default-features = false, features = [
    "macos_fsevent",
] }
# crossbeam-channel = { version = "0.5", optional = true }
eyre = "0.6"
log = "0.4"
chrono = "0.4"
cfg-if = "1"
