[package]
name = "solarxr"
version = "0.0.0"

license.workspace = true
authors.workspace = true
repository.workspace = true

edition.workspace = true
rust-version.workspace = true


[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.17"
solarxr_protocol = { git = "https://github.com/SlimeVR/SolarXR-Protocol", rev = "f68b86125f4cddf9a95919b813f67bc067de6b1a" }
ouroboros = "0.15"
thiserror = "1"
futures-util = "0.3"

log.workspace = true
eyre.workspace = true
