[package]
name = "solarxr"
version = "0.0.0"

license.workspace = true
authors.workspace = true
repository.workspace = true

edition.workspace = true
rust-version.workspace = true


[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.17"
solarxr_protocol = { git = "https://github.com/SlimeVR/SolarXR-Protocol", rev = "aeae6b3" }
ouroboros = "0.15"
thiserror = "1"
futures-util = "0.3"

log.workspace = true
eyre.workspace = true
