[package]
name = "slimevr_overlay"
version = "0.0.0"

license = "MIT OR Apache-2.0"
authors = ["Ryan Butler <thebutlah@gmail.com>"]
repository = "https://github.com/SlimeVR/SlimeVR-Rust"

edition = "2021"
rust-version = "1.61"

[dependencies]
color-eyre = "0.6"
ctrlc = "3"
eyre = "0.6"
lazy_static = "1"
log = "0.4"
nalgebra = "0.30"
num-derive = "0.3"
num-traits = "0.2"
ovr_overlay = { version = "=0.0.0", features = ["nalgebra"] }
pretty_env_logger = "0.4"
stackvec = "0.2"
thiserror = "1"
bytes = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.17"
futures-util = "0.3"
ouroboros = "0.15"
solarxr_protocol = { git = "https://github.com/SlimeVR/SolarXR-Protocol", rev = "ceaae26ea249b573ba2f00c1473fb1749c4dc505" }
tokio-stream = "0.1"
tokio-graceful-shutdown = "0.6"
